# data-inges-exos

./: .gitignore
01-clean-code/: README.md  main.py
01-clean-code-solution/: README.md  pyproject.toml
01-clean-code-solution/src/: main.py
01-clean-code-solution/tests/: main_test.py
02-clean-code/: README.md  pyproject.toml
02-clean-code/src/fr/hymaia/: exo2_glue_job.py
02-clean-code/src/fr/hymaia/exo2/: spark_aggregate_job.py  spark_clean_job.py
02-clean-code/src/fr/hymaia/exo4/: no_udf.py
03-clean-code/: README.md  main.py  pyproject.toml
03-config/infra/: main.tf
03-config/src/: main_env.py  main_params.py
04-config/: README.md  pyproject.toml
04-config/src/: config.yaml  handler.py  main_conf_file.py
